--- a/my-app/src/components/2_main/AddCard/AddCard.module.css
+++ b/my-app/src/components/2_main/AddCard/AddCard.module.css
@@ -14,6 +14,11 @@
     margin-bottom: 8px;
 }
 
+.AddCard:disabled{
+    cursor:initial;
+    background-color: rgb(255, 62, 104);
+}
+
 .plus{
     margin-right: 4px;
 }
@@ -27,3 +32,5 @@
     display: flex;
     justify-content: center;
 }
+
+
