Kanban-Board: +детальная страница задачи (без перехода на другую страницу сайта)

--- a/my-app/src/components/2_main/ListItem/ListItem.module.css
+++ b/my-app/src/components/2_main/ListItem/ListItem.module.css
@@ -12,7 +12,12 @@
     padding: 7px 8px;
 
     font-size: 18px;
+    text-align: left;
     line-height: 21px;
     
     color: #000000;
+}
+
+.ListItem:hover{
+    background-color: bisque;
 }
