--- a/my-app/src/components/2_main/AddCard/AddCard.module.css
+++ b/my-app/src/components/2_main/AddCard/AddCard.module.css
@@ -14,6 +14,10 @@
     margin-bottom: 8px;
 }
 
+.AddCard:hover{
+    background-color: rgb(104, 250, 165);
+}
+
 .AddCard:disabled{
     cursor:initial;
     background-color: rgb(255, 62, 104);
