--- a/my-app/src/components/2_main/AwesomeMain.module.css
+++ b/my-app/src/components/2_main/AwesomeMain.module.css
@@ -4,7 +4,7 @@
     height: 500px;
     /* left: 0px;
     top: 0px; */
-    padding: 20px 0 0 19px;
+    padding: 20px 0 32px 19px;
     position: relative;
 
     display: flex;
