--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -17,10 +17,14 @@ body {
   height:100vh;
   display: flex;
   flex-direction: column;
+
+  height: auto;
+  width: 100%;
+  height: 100%
 }
 
 .root {
-  height:100vh;
+  height:100%;
   display: flex;
   flex-direction: column;
 }
