--- a/my-app/src/components/2_main/ItemDesc/ItemDesc.module.css
+++ b/my-app/src/components/2_main/ItemDesc/ItemDesc.module.css
@@ -4,8 +4,7 @@
     left: 26px;
 
     min-width: 282px;
-    max-width: 80vw;
-    /* width: 500px; */
+    width: 500px;
     height: 400px;
     /* left: 12px;
     top: 44px; */
@@ -57,6 +56,10 @@
     font-size: 18px;
     line-height: 21px;
     border-style: none;
+    min-width: calc(282px - 28px - 23px);
+    /* width: 500px; */
+    max-width: calc(5000px - 28px - 23px);
+    resize:none;
 
     color: #000000;
 }
