--- a/my-app/src/components/3_footer/AwesomeFooter.module.css
+++ b/my-app/src/components/3_footer/AwesomeFooter.module.css
@@ -1,15 +1,11 @@
 .footer{
-    /* position: absolute; */
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 
     align-items: center;
-    /* align-self:flex-end; */
-    
-    /* width: 1235px; */
     height: 55px;
-    /* left: 0px;
-    top: 0px; */
+    padding-left: 21px;
+    padding-right: 21px;
     
     background: #0067A3;
 }
@@ -22,4 +18,12 @@
     line-height: 21px;
 
     color: #FFFFFF;
+}
+
+.taskContainer{
+    display: flex;
+    justify-self: flex-start;
+}
+.task1{
+    margin-right: 35px;
 }
