--- a/my-app/src/components/2_main/Main.module.css
+++ b/my-app/src/components/2_main/Main.module.css
@@ -1,10 +1,23 @@
-.main{
+.awesomeMain{
     /* position: absolute; */
     /* width: 1235px; */
-    height: 500px;
+    height: 600px;
+  height: calc(95vh - 55px*2);
     /* left: 0px;
     top: 0px; */
     padding: 20px 0 32px 19px;
+    position: relative;
+
+    /* display: flex; */
+    /* gap: 24px; */
+    
+
+    background: #0079BF;
+}
+.main{
+    
+    margin: 0;
+    padding: 0;
     position: relative;
 
     display: flex;
