--- a/my-app/src/components/2_main/Dropdown/Dropdown.module.css
+++ b/my-app/src/components/2_main/Dropdown/Dropdown.module.css
@@ -32,7 +32,7 @@
     
     /* text-align: end; */
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     /* vertical-align: top; */
 
 }
