--- a/my-app/src/components/1_header/AwesomeHeader.module.css
+++ b/my-app/src/components/1_header/AwesomeHeader.module.css
@@ -61,6 +61,9 @@
     height: 38.4px;
     width:  38.4px;
 }
+/* .arrowDown{
+    display: block;
+} */
 
 .dropdown{
     position: absolute;
@@ -86,4 +89,16 @@
     border-style: none;
     font-size: 14px;
     line-height: 16px;
+}
+
+@media screen and (width <= 505px) {
+    .header{
+        justify-content: flex-end;
+        
+        background: #0079BF;
+    }
+    
+    .title{
+        display: none;
+    }    
 }
