--- a/my-app/src/components/2_main/Dropdown-Item/DropdownItem.module.css
+++ b/my-app/src/components/2_main/Dropdown-Item/DropdownItem.module.css
@@ -13,7 +13,7 @@
     
     /* text-align: end; */
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     /* vertical-align: top; */
 
 }
