--- a/my-app/src/components/2_main/ItemDesc/ItemDesc.module.css
+++ b/my-app/src/components/2_main/ItemDesc/ItemDesc.module.css
@@ -2,15 +2,17 @@
     position: absolute;
     top: 22px;
     left: 26px;
+    right: 26px;
+    bottom: 20px;
 
     min-width: 282px;
-    width: 500px;
-    height: 400px;
+    width: auto;
+    height: auto;
     /* left: 12px;
     top: 44px; */
     
     background: #FFFFFF;
-    /* border-radius: 5px; */
+    border-radius: 5px;
     border-style: none;
 
     padding: 17px 23px 17px 28px;
@@ -56,7 +58,7 @@
     font-size: 18px;
     line-height: 21px;
     border-style: none;
-    min-width: calc(282px - 28px - 23px);
+    min-width: calc(100% - 28px - 23px);
     /* width: 500px; */
     max-width: calc(5000px - 28px - 23px);
     resize:none;
