--- a/my-app/src/components/2_main/Dropdown/Dropdown.module.css
+++ b/my-app/src/components/2_main/Dropdown/Dropdown.module.css
@@ -65,3 +65,16 @@
     background: #DEDEDE;
 }
 
+.custom_select{
+    width: 258px;
+
+}
+
+.custom_select select {
+    /* display: none; */
+}
+
+.select-selected {
+    background-color: DodgerBlue;
+    background-color: rgb(184, 40, 107);
+}
