--- a/my-app/src/components/2_main/AddCard/AddCard.module.css
+++ b/my-app/src/components/2_main/AddCard/AddCard.module.css
@@ -2,19 +2,14 @@
     font-size: 18px;
     line-height: 21px;
     color: #5E6C84;
-    /* position: relative; */
     display: flex;
     align-items: center;
     border-style:none;
-    /* background: #EBECF0; */
-    /* width: 150px; */
 
     border-radius: 10px;
-    /* margin-top: 17px; */
     margin-bottom: 8px;
     border-radius: 5px;
-    /* background-color:#EBECF0; */
-    background-color:transparent;
+    background: #EBECF0;
 }
 
 .AddCard:hover{
@@ -31,8 +26,6 @@
 }
 
 .Submit{
-    /* border-style:dashed;
-    border-color: #EBECF0; */
     background-color: #0079BF;
     color: white;
     width: 102px;
@@ -41,4 +34,15 @@
     border-radius: 5px;
 }
 
+.Submit:hover{
+    background-color: blueviolet;
+}
+
+@media screen and (width <= 505px) {
+
+    .DropTitle{
+        min-width: 100%
+    }
+    
+}
 
