[kanban] - func renaming, fix card's names with only spaces, max name length=25

--- a/my-app/src/components/2_main/AwesomeMain.module.css
+++ b/my-app/src/components/2_main/AwesomeMain.module.css
@@ -2,7 +2,7 @@
     height: calc(100% - 55px*2);
     position: relative;
     
-    min-width: 1235px;
+    /* min-width: 1235px; */
 
     background: #0079BF;
 }
