--- a/my-app/src/components/2_main/List/List.module.css
+++ b/my-app/src/components/2_main/List/List.module.css
@@ -1,64 +1,58 @@
-.List{
-    /* width: 282px; */
-    min-width: 282px;
-    max-height: 100%;
+.List {
+  min-width: 282px;
+  max-height: 100%;
 
-    background: #EBECF0;
-    border-radius: 10px;
+  background: #ebecf0;
+  border-radius: 10px;
 
-    padding: 12px 12px 8px 12px;
-    /* overflow-y: visible; */
-    /* overflow-x: auto; */
-    word-wrap: break-word;
+  padding: 12px 12px 8px 12px;
+  word-wrap: break-word;
 }
 
-.List Ul{
-    padding: 0;
+.List Ul {
+  padding: 0;
 }
 
-.title{
-    margin-bottom: 15px;
-    
-    font-size: 18px;
-    line-height: 21px;
+.title {
+  margin-bottom: 15px;
 
-    color: #000000;
+  font-size: 18px;
+  line-height: 21px;
+
+  color: #000000;
 }
 
 .List::-webkit-scrollbar {
-    width: 12px;               
-    height: 52px;   
+  width: 12px;
+  height: 52px;
 }
 .List::-webkit-scrollbar-track {
-    background: white;       
-    margin: 29px 0;
-    border-radius: 5px;
+  background: white;
+  margin: 29px 0;
+  border-radius: 5px;
 }
 .List::-webkit-scrollbar-thumb {
-    background-color: #CBCBCB;
-    border-radius: 5px;
+  background-color: #cbcbcb;
+  border-radius: 5px;
 }
-
 
 .List::-webkit-scrollbar:horizontal {
-    width: 12px;               
-    height: 12px;
+  width: 12px;
+  height: 12px;
 }
 .List::-webkit-scrollbar-track:horizontal {
-    background: white;       
-    margin: 29px 0;  
-    border-radius: 5px;
+  background: white;
+  margin: 29px 0;
+  border-radius: 5px;
 }
 .List::-webkit-scrollbar-thumb:horizontal {
-    background-color: #CBCBCB;
-    border-radius: 5px;    
+  background-color: #cbcbcb;
+  border-radius: 5px;
 }
 
 @media screen and (width <= 505px) {
-    .List{
-        /* min-width: calc(100% - 21px - 35px); */
-        width: 282px;
-        max-height: 249px;
-        overflow-y: scroll;
-    }
+  .List {
+    width: 282px;
+    max-height: 249px;
+  }
 }
