--- a/my-app/src/components/2_main/Main/Main.module.css
+++ b/my-app/src/components/2_main/Main/Main.module.css
@@ -1,20 +1,21 @@
-.main{
-    margin: 0;
-    padding: 0;
-    position: relative;
-    /* height: 600px; */
-    /* height: calc(100% - 55px*2); */
-    height: 100%;
-    padding: 20px 0 32px 19px;
+.main {
+  margin: 0;
+  padding: 0;
+  position: relative;
+  /* height: 600px; */
+  /* height: calc(100% - 55px*2); */
+  height: 100%;
+  padding: 20px 0 32px 19px;
 
-    display: flex;
-    gap: 24px;
-    
-    /* background: #0079BF; */
+  display: flex;
+  /* flex-wrap: wrap; */
+  gap: 24px;
+
+  /* background: #0079BF; */
 }
 
 @media screen and (width <= 505px) {
-    .main{
-        flex-direction: column;
-    }
+  .main {
+    flex-direction: column;
+  }
 }
