--- a/my-app/src/components/1_header/AwesomeHeader.module.css
+++ b/my-app/src/components/1_header/AwesomeHeader.module.css
@@ -1,117 +1,113 @@
-.header{
-    /* position: absolute; */
-    width: 100vw;
-    height: 55px;
+.header {
+  /* position: absolute; */
+  /* width: 100vw;
+    width: 100%; */
+  height: 55px;
 
-    padding: 5px 20px 5px 23.21px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    
-    background: #0067A3;
-}
+  padding: 5px 20px 5px 23.21px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-.title{
-    width: 331px;
-    height: 45px;
-    display: flex;
-    align-items: center;
-
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 28px;
-    line-height: 33px;
-
-    color: #FFFFFF;
+  background: #0067a3;
 }
 
-.btnUserContainer{
-    position: relative;
+.title {
+  width: 331px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 33px;
+
+  color: #ffffff;
 }
 
-.btnUser{
-    width: 64px;
-    height: 40px;
-    padding: 0 6px 0 0;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    background-color: transparent;
-    border-style: none;
+.btnUserContainer {
+  position: relative;
 }
 
-.btnUser:hover{
-    transform: scale(1.1);
-}
-.avatarContainer{
-    height: 38.4px;
-    width:  38.4px;
-    position: relative;
-}
-.avatar{
-    height: 38.4px;
-    width:  38.4px;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-.icon{
-    height: 38.4px;
-    width:  38.4px;
-}
-/* .arrowDown{
-    display: block;
-} */
-
-.dropdown{
-    position: absolute;
-    padding-top: 11px;
-    right: 0;
-    z-index: 99;
+.btnUser {
+  width: 64px;
+  height: 40px;
+  padding: 0 6px 0 0;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: transparent;
+  border-style: none;
 }
 
-.selector_img{
-    position: absolute;
-    left: 82px;
-    /* border-style: dashed; */
-    top: 3px;
+.btnUser:hover {
+  transform: scale(1.1);
 }
-.selector{
-    width: 134px;
-    height: 60px;
-    padding: 8px 7px;
-    background: #FFFFFF;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between
+.avatarContainer {
+  height: 38.4px;
+  width: 38.4px;
+  position: relative;
 }
-/* .selector select{
-    border-style: none;
-    font-size: 14px;
-    line-height: 16px;
-} */
-.selector_btn{
-    display: flex;
-    border-style: none;
-    background: transparent;
-    font-size: 14px;
-    line-height: 16px;
+.avatar {
+  height: 38.4px;
+  width: 38.4px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  display: inline;
 }
-.selector_btn:hover{
-    text-decoration: underline;
+.icon {
+  height: 38.4px;
+  width: 38.4px;
+}
+
+.dropdown {
+  position: absolute;
+  padding-top: 11px;
+  right: 0;
+  z-index: 99;
+}
+
+.selector_img {
+  position: absolute;
+  left: 82px;
+  opacity: 1;
+  display: inline;
+  top: 3px;
+}
+.selector {
+  width: 134px;
+  height: 60px;
+  padding: 8px 7px;
+  background: #ffffff;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.selector_btn {
+  display: flex;
+  border-style: none;
+  background: transparent;
+  font-size: 14px;
+  line-height: 16px;
+}
+.selector_btn:hover {
+  text-decoration: underline;
 }
 
 @media screen and (width <= 505px) {
-    .header{
-        justify-content: flex-end;
-        
-        background: #0079BF;
-    }
-    
-    .title{
-        display: none;
-    }    
+  .header {
+    justify-content: flex-end;
+
+    background: #0079bf;
+  }
+
+  .title {
+    display: none;
+  }
 }
