--- a/my-app/src/components/2_main/ItemDesc/ItemDesc.module.css
+++ b/my-app/src/components/2_main/ItemDesc/ItemDesc.module.css
@@ -1,71 +1,71 @@
-.ItemDesc{
-    position: absolute;
-    top: 22px;
-    left: 26px;
-    right: 26px;
-    bottom: 20px;
+.ItemDesc {
+  position: absolute;
+  top: 22px;
+  left: 26px;
+  right: 26px;
+  bottom: 20px;
 
-    min-width: 282px;
-    width: auto;
-    height: auto;
-    /* left: 12px;
+  min-width: 282px;
+  width: auto;
+  height: auto;
+  /* left: 12px;
     top: 44px; */
-    
-    background: #FFFFFF;
-    border-radius: 5px;
-    border-style: none;
 
-    padding: 17px 23px 17px 28px;
+  background: #ffffff;
+  border-radius: 5px;
+  border-style: none;
+
+  padding: 17px 23px 17px 28px;
 }
 
-.head{
-    font-size: 24px;
-    line-height: 28px;
-    display: flex;
-    justify-content: space-between;
+.head {
+  font-size: 24px;
+  line-height: 28px;
+  display: flex;
+  justify-content: space-between;
 }
 
-.buttonX{
-    height: 25px;
-    width: 25px;
-    position: relative;
-    border-style: none;
-    padding: 0;
-    background: #FFFFFF;
+.buttonX {
+  height: 25px;
+  width: 25px;
+  position: relative;
+  border-style: none;
+  padding: 0;
+  background: #ffffff;
 }
-.buttonX:hover{
-    background-color: rgb(184, 165, 169);
+.buttonX:hover {
+  background-color: rgb(184, 165, 169);
 }
-.imgX{
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-
-.title{
-    margin-top: 5px;
-    margin-bottom: 35px;
-    font-size: 24px;
-    line-height: 28px;
-    word-wrap:break-word;
-    max-width: calc(100% - 25px - 5px);
+.imgX {
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
-.desc{
-    font-size: 18px;
-    line-height: 21px;
-    border-style: none;
-    min-width: 100%;
-    resize:none;
+.title {
+  margin-top: 5px;
+  margin-bottom: 35px;
+  font-size: 24px;
+  line-height: 28px;
+  word-wrap: break-word;
+  max-width: calc(100% - 25px - 5px);
+}
 
-    color: #000000;
+.desc {
+  font-size: 18px;
+  line-height: 21px;
+  border-style: none;
+  min-width: 100%;
+  resize: none;
+
+  color: #000000;
 }
 
 @media screen and (width <= 505px) {
-    .ItemDesc{
-        width: calc(85%);
-    }
-    .desc{
-        width: calc(70%);
-    }
+  .ItemDesc {
+    width: calc(85%);
+  }
+  .desc {
+    width: calc(70%);
+  }
 }
