--- a/my-app/src/components/2_main/ListItem/ListItem.module.css
+++ b/my-app/src/components/2_main/ListItem/ListItem.module.css
@@ -1,40 +1,39 @@
-.ListItem{
-    
-    min-width: 246px;
-    max-width: 258px;
-    min-height: 35px;
-    /* left: 12px;
+.ListItem {
+  min-width: 246px;
+  max-width: 258px;
+  min-height: 35px;
+  /* left: 12px;
     top: 44px; */
-    display: block;
-    
-    background: #FFFFFF;
-    border-radius: 5px;
-    border-style: none;
+  display: block;
 
-    margin-bottom: 15px;
-    padding: 7px 8px;
+  background: #ffffff;
+  border-radius: 5px;
+  border-style: none;
 
-    font-size: 18px;
-    text-align: left;
-    line-height: 21px;
-    list-style: none;
-    text-decoration: none;
-    
-    color: #000000;
+  margin-bottom: 15px;
+  padding: 7px 8px;
+
+  font-size: 18px;
+  text-align: left;
+  line-height: 21px;
+  list-style: none;
+  text-decoration: none;
+
+  color: #000000;
 }
-.LinkItem{
-    text-decoration: none;
-    
-    color: #000000;
+.LinkItem {
+  text-decoration: none;
+
+  color: #000000;
 }
 
-.ListItem:hover{
-    background-color: bisque;
+.ListItem:hover {
+  background-color: bisque;
 }
 
 @media screen and (width <= 505px) {
-    .ListItem{
-        /* min-width: calc(100% - 12px - 12px); */
-        width: 100%;
-    }
+  .ListItem {
+    /* min-width: calc(100% - 12px - 12px); */
+    width: 100%;
+  }
 }
